# tex-jp-build

./: .gitignore  BUILD_MSVC.md  CMakeLists.txt  MAINTENANCE.md  README.md  texjpbuild.sh  usermap_texlive_svn.txt
source/libs/libpng/: CMakeLists.txt  ChangeLog  Makefile.in  README  aclocal.m4  configure  version.ac
source/libs/libpng/TLpatches/: ChangeLog  TL-Changes
source/libs/libpng/include/: Makefile.in
source/libs/zlib/: CMakeLists.txt  Makefile.in  aclocal.m4
source/libs/zlib/include/: Makefile.in
source/texk/: CMakeLists.txt  Makefile.in  README  configure
source/texk/bibtex-x/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  bibtex-1.c  bibtex-2.c  bibtex-3.c  bibtex-4.c  bibtex.h  bibtexu.1  configure.ac  gblprocs.h  gblvars.h  version.h
source/texk/bibtex-x/bibtests/: jxampl-jabbrv-bu-wide.bbl  jxampl-jabbrv-bu.bbl  jxampl-jalpha-bu-wide.bbl  jxampl-jalpha-bu.aux  jxampl-jalpha-bu.bbl  jxampl-jipsj-bu-wide.bbl  jxampl-jipsj-bu.bbl  jxampl-jname-bu-wide.bbl  jxampl-jname-bu.aux  jxampl-jname-bu.bbl  jxampl-jorsj-bu.bbl  jxampl-jplain-bu.bbl  jxampl-junsrt-bu.bbl  jxampl-tieice-bu.bbl  jxampl-tipsj-bu.bbl
source/texk/bibtex-x/cmake/: config.cmake  config.h.in
source/texk/bibtex-x/tests/: bibtexu-basic.test  bibtexu-char.test  bibtexu-jbib.test  bibtexu-jxampl.test  isknju.bbl  jabbrv.bst  jalpha.bst  junsrt.bst  ltnbib.bib  mlgbibu-jabbrv.bbl  mlgbibu-jalpha.aux  mlgbibu-jalpha.bbl  mlgbibu-jname.bbl  mlgbibu-jplain.aux  mlgbibu-jplain.bbl  mlgbibu-junsrt.aux  mlgbibu-junsrt.bbl  namea.bbl  nameu.aux  nameu.bbl  testiscjk.bst  testisknj.bst  testsubstr.bst  testtxtprfx.bst  testwidthu.bib  unibib.bib  unibibu-jabbrv.aux  unibibu-jabbrv.bbl  unibibu-jalpha.bbl  unibibu-jname.bbl  unibibu-jplain.bbl  unibibu-junsrt.aux  unibibu-junsrt.bbl  widthu.bbl
source/texk/dvi2tty/: CMakeLists.txt  ChangeLog  Makefile.in  dvi2tty.test
source/texk/dvi2tty/cmake/: c-auto.h.in  config.cmake
source/texk/dvi2tty/dvi2tty-src/: dvistuff.c
source/texk/dvidvi/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4
source/texk/dvidvi/cmake/: config.h.in
source/texk/dviout-util/: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  README  chkdvifont.c  chkdvifont.test  chkfont.c  chkfont.test  chkfont.txt  dd.h  dvispc-en.txt  dvispc-ja.txt  dvispc.c  dvispc.test  dvispc.txt  dvispce.txt  propw-ja.txt  propw.c  propw.test  propw0.txt
source/texk/dviout-util/cmake/: config.h.in
source/texk/dviout-util/tests/: jistest.pl  test.cfn
source/texk/dvipdf-x/data/: Makefile.in
source/texk/dvipdfm-x/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  cidtype2.c  configure  configure.ac  dvi.c  dvipdfmx-lmr0.test  dvipdfmx-ttf0.test  dvipdfmx-upjf.test  dvipdfmx-upjf3.test  epdf.c  tfm.c  tfm.h  truetype.c  tt_cmap.c  tt_cmap.h  unicode.c  unicode.h  vf.c  xdvipdfm-bad.test  xdvipdfm-pdf.test  xdvipdfm-psz.test
source/texk/dvipdfm-x/cmake/: calldll.c  config.h.in
source/texk/dvipdfm-x/data/: dvipdfmx.cfg
source/texk/dvipdfm-x/tests/: ivs06.dvi  ivs06.dvispc  ivs06.tex  ivs12.dvi  ivs12.dvispc  ivs12.tex  up-hara.map  up-ipamjm.map  upjf-r00.ofm  xdvipdfm-pdfgroup.tex
source/texk/dvipsk/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  afm2tfm.c  configure  configure.ac  dopage.c  dvips.c  dvips.h  output.c  pprescan.c  scanpage.c  tfmload.c  uptex-vf.test  virtualfont.c
source/texk/dvipsk/cmake/: c-auto.h.in
source/texk/dvipsk/squeeze/: Makefile.in  aclocal.m4
source/texk/dvipsk/testdata/: Makefile_upjf  upjf-r00.opl
source/texk/kpathsea/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  elt-dirs.c  tex-glyph.c  texmf.cnf  version.ac
source/texk/kpathsea/cmake/: c-auto.h.in  cnf-to-paths.py  config.cmake  dirent.c  kpathsea.py
source/texk/kpathsea/doc/: Makefile.in
source/texk/kpathsea/man/: Makefile.in
source/texk/kpathsea/tests/: cnfline.test  cnfnlink.test  cnfnull.test  kpseaccess.test  kpsereadlink.test  kpsestat.test
source/texk/kpathsea/win32/: CMakeLists.txt  Makefile.in
source/texk/makejvf/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  main.c  makejvf.h  makejvf.test  tableread.c  tfmread.c  uniblock.c  uniblock.h  usrtable.c  usrtable.h  version.h  write.c
source/texk/mendexk/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  fread.c  fwrite.c  ktable.h  main.c  mendex.h  sort.c  styfile.c  version.h
source/texk/mendexk/cmake/: c-auto.h.in
source/texk/mendexk/tests/: mendex.test  range.idx  range1.ind  range2.ind  range3.ind  range4.ind  tort.idx
source/texk/ptexenc/: CMakeLists.txt  ChangeLog  Makefile.in  aclocal.m4  c-auto.in  configure  kanjicnv.c  ptekf.c  ptexenc.c  tex8benc.h  unicode.c  version.ac
source/texk/ptexenc/cmake/: c-auto.h.in
source/texk/ptexenc/ptexenc/: ptexenc.h  unicode.h
source/texk/seetexk/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  dvibook.c  dvibook.man  dviclass.c  dviclass.h  dvicodes.h  dviconcat.c  dviselect.c  dvitodvi.c  seetexk.test
source/texk/texlive/: Makefile.in  aclocal.m4
source/texk/texlive/linked_scripts/: Makefile.in
source/texk/texlive/tl_support/: Makefile.am  Makefile.in
source/texk/texlive/windows_wrapper/: README  runscript.tlu
source/texk/upmendex/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  convert.c  exvar.h  fread.c  fwrite.c  main.c  mendex.h  sort.c  styfile.c  upmendex.ja.txt  var.h
source/texk/upmendex/tests/: range.idx  range2.ind  range3.ind  rule0.ind  tort.idx  upmendex.test
source/texk/web2c/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  PROJECTS  aclocal.m4  configure  configure.ac  ctangleboot.cin  cwebboot.cin  dvitype.ch  help.h  silent-sh.in  tangle.ch  tangle.test  tangleboot.pin  tex.ch  texmfmem.h  texmfmp-help.h  texmfmp.h  weav-twill.ch
source/texk/web2c/ac/: web2c.ac
source/texk/web2c/am/: texmf.am
source/texk/web2c/bibtests/: charp.bbl  isknju.bbl  jxampl-jabbrv-p.aux  jxampl-jabbrv-p.bbl  jxampl-jabbrv-up.bbl  (+55 more)
(+409 files in other folders)
